--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 #ToDo Projeto
 
-#linhar conteudo de todas as seções (70px) - para alinhanmendo web e (20px) - para alinhamento mobile
+#padronizar variaveis css emstyle.css
+#limpar style.css
 
 
 
